# multimodal_assistant

./: .gitignore  IMPROVEMENTS_SUMMARY.md  Makefile  QUICKSTART.md  README.md  TESTING.md  main.py  pyproject.toml  pytest.ini  run.sh  setup.sh
docs/: DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  VAD_AND_REALTIME_IMPROVEMENTS.md  developer_guide.md  multimodal-ai-assistant-spec.md  multimodal-assistant-python-impl.md
native/webrtc_apm/: BUILD.md  apm_shim.cc  apm_shim.h  apm_shim_v1.cc
old-ref/src/multimodal_assistant/audio/: resample.py
old-ref/src/multimodal_assistant/core/: event_bus.py  streams.py
old-ref/src/multimodal_assistant/engines/: llm_engine.py  vision_engine.py
old-ref/src/multimodal_assistant/pipeline/: coordinator.py
old-ref/src/multimodal_assistant/processors/: frame_sampler.py
old-ref/src/multimodal_assistant/utils/: logger.py
scripts/: test.sh
src/: main.py
src/assistant/: Assistant.py
src/assistant/agent/: Agent.py  __init__.py  graph.py  state.py
src/assistant/agent/llms/: base.py  (+3 more)
src/assistant/config/: settings.py
src/assistant/core/: __init__.py  event_bus.py  streams.py
src/assistant/engines/: base.py  lm_engine.py  stt_engine.py  tts_engine.py  vision_engine.py
src/assistant/pipeline/: __init__.py  audio_input_handler.py  audio_output_handler.py  text_input_handler.py  text_output_handler.py  video_input_handler.py
src/assistant/processors/: __init__.py  vad.py
src/assistant/utils/: performance.py
src/multimodal_assistant/: main.py
src/multimodal_assistant/config/: settings.py
src/multimodal_assistant/core/: state_manager.py  streams.py
src/multimodal_assistant/engines/: langgraph_engine.py  llm_engine.py  stt_engine.py  tts_engine.py  vision_engine.py
src/multimodal_assistant/pipeline/: coordinator.py  input_handler.py  output_handler.py
src/multimodal_assistant/processors/: aec.py  aec_core.py  sentence_buffer.py  vad.py  webrtc_apm.py
src/multimodal_assistant/utils/: logger.py  performance.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_checkpointers.py  test_engines.py  test_graph.py  test_llms.py  test_memory.py  test_pipeline.py  test_streams.py
(+13 files in other folders)
