[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vera-assistant"
version = "0.1.0"
description = "Multimodal AI assistant optimized for Apple M4 Pro with ultra-low latency voice interaction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.0",
    "kokoro-onnx>=0.4.9",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "webrtcvad>=2.0.10",
]

[project.scripts]
multimodal-assistant = "multimodal_assistant.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/multimodal_assistant"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.2",
]
