[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assistant"
version = "0.1.0"
description = "Multimodal AI assistant optimized for Apple M4 Pro with ultra-low latency voice interaction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "faster-whisper>=1.2.0",
    "kokoro-onnx>=0.4.9",
    "langchain-chroma>=0.1.0",
    "langchain-core>=0.3.79",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.2.0",
    "langgraph>=0.6.10",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "numpy>=2.3.3",
    "ollama>=0.6.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pyaec>=1.0.1",
    "sounddevice>=0.5.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.56.2",
    "webrtcvad>=2.0.10",
]

[project.scripts]
assistant = "assistant.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.13.2",
]
